[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/ending_levels/boss_level.gd" type="Script" id=1]
[ext_resource path="res://levels/ending_levels/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/common/assets/twilight/grey_bricks/twilight_grey_bricks.tres" type="TileSet" id=3]
[ext_resource path="res://levels/common/assets/grass_and_stone/green/green.tres" type="TileSet" id=4]
[ext_resource path="res://levels/common/assets/twilight/grey_bricks/twilight_grey_bricks_extras.tres" type="TileSet" id=5]
[ext_resource path="res://levels/common/assets/twilight/grey_bricks/twilight_grey_bricks_extras_wohitbox.tres" type="TileSet" id=6]
[ext_resource path="res://levels/common/assets/grass_and_stone/green_grey/green_grey.tres" type="TileSet" id=7]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/enemies/soldier.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/enemies/minotaur/minotaur.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.2327, 93.3848 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 164.932, 76.1343 )

[node name="Boss_level" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="ParallaxBackground" parent="Background" instance=ExtResource( 2 )]
layer = -2
offset = Vector2( -50, -50 )
scale = Vector2( 1.2, 1.2 )
transform = Transform2D( 1.2, 0, 0, 1.2, -50, -50 )
scroll_limit_begin = Vector2( 0, 30 )

[node name="Platforms" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Bridge" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 851979, 1, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 536870912, 0, 917515, -1073741821, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, -1610612732, 0, 917529, -1610612732, 0, 917530, -1610612732, 0, 917531, -1610612732, 0, 917532, -1610612732, 0, 917533, -1610612732, 0, 917534, -1610612732, 0, 917535, -1610612733, 0, 983051, 1073741824, 0, 983052, 1073741827, 0, 983053, 1610612739, 0, 983054, 1610612739, 0, 983055, 1610612739, 0, 983056, 1610612739, 0, 983057, 1610612739, 0, 983058, 1610612739, 0, 983059, 1610612739, 0, 983060, 1610612739, 0, 983061, 1610612739, 0, 983062, 1610612739, 0, 983063, 1610612739, 0, 983064, 1610612739, 0, 983065, 1610612739, 0, 983066, 1610612739, 0, 983067, 1610612739, 0, 983068, 1610612739, 0, 983069, 1610612739, 0, 983070, 1610612739, 0, 983071, 1610612736, 0, 1048587, 1610612743, 0, 1048588, 1073741831, 0, 1048606, 1610612743, 0, 1048607, 1073741831, 0, 1114123, 1610612743, 0, 1114124, 1073741831, 0, 1114142, 1610612743, 0, 1114143, 1073741831, 0, 1179659, 1610612743, 0, 1179660, 1073741831, 0, 1179678, 1610612743, 0, 1179679, 1073741831, 0, 1245195, 1610612743, 0, 1245196, 1073741831, 0, 1245214, 1610612743, 0, 1245215, 1073741831, 0, 1310731, 1610612743, 0, 1310732, 1073741831, 0, 1310750, 1610612743, 0, 1310751, 1073741831, 0, 1376267, 1610612743, 0, 1376268, 1073741831, 0, 1376286, 1610612743, 0, 1376287, 1073741831, 0, 1441803, 1610612743, 0, 1441804, 1073741831, 0, 1441822, 1610612743, 0, 1441823, 1073741831, 0 )

[node name="Earth" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131043, 536870939, 0, 131044, 536870939, 0, 196579, 536870939, 0, 196580, 536870939, 0, 262115, 536870939, 0, 262116, 536870939, 0, 327651, 536870939, 0, 327652, 536870939, 0, 393187, 536870939, 0, 393188, 536870939, 0, 458723, 536870939, 0, 458724, 536870939, 0, 524259, 536870939, 0, 524260, 536870939, 0, 589795, 536870939, 0, 589796, 536870939, 0, 655331, 536870939, 0, 655332, 536870939, 0, 720867, 536870939, 0, 720868, 536870939, 0, 786403, 536870939, 0, 786404, 536870939, 0, 851939, 536870939, 0, 851940, 536870939, 0, 917475, 536870958, 0, 917476, 536870958, 0, 917477, 536870958, 0, 917478, 536870958, 0, 917479, 536870958, 0, 917480, 536870958, 0, 917481, 536870958, 0, 917482, 536870958, 0, 917483, 536870957, 0, 917484, 536870957, 0, 917485, 536870957, 0, 917486, 536870957, 0, 917487, 536870957, 0, 917488, 536870957, 0, 917489, 536870957, 0, 917490, 536870957, 0, 917491, 536870957, 0, 917492, 45, 0, 917493, 45, 0, 917494, 45, 0, 917495, 45, 0, 917496, 45, 0, 917497, 45, 0, 917498, 45, 0, 917499, 45, 0, 917500, 45, 0, 917501, 45, 0, 917502, 45, 0, 917503, 45, 0, 851968, 45, 0, 851969, 45, 0, 851970, 45, 0, 851971, 45, 0, 851972, 45, 0, 851973, 45, 0, 851974, 45, 0, 851975, 45, 0, 851976, 45, 0, 851977, 45, 0, 851978, 45, 0, 852000, 44, 0, 852001, 8, 0, 852002, 8, 0, 852003, 8, 0, 852004, 42, 0, 852005, 42, 0, 852006, 42, 0, 852007, 42, 0, 852008, 42, 0, 852009, 42, 0, 852010, 42, 0, 852011, 42, 0, 852012, 42, 0, 852013, 42, 0, 852014, 42, 0, 852015, 42, 0, 852016, 42, 0, 852017, 42, 0, 852018, 42, 0, 852019, 42, 0, 852020, 42, 0, 852021, 42, 0, 852022, 42, 0, 852023, 42, 0, 852024, 536870954, 0, 852025, 536870954, 0, 852026, 536870954, 0, 852027, 536870954, 0, 852028, 536870954, 0, 852029, 536870954, 0, 852030, 536870954, 0, 852031, 536870954, 0, 852032, 536870954, 0, 983011, 536870939, 0, 983012, 536870939, 0, 983013, 536870939, 0, 983014, 536870939, 0, 983015, 536870939, 0, 983016, 536870939, 0, 983017, 536870939, 0, 983018, 536870939, 0, 983019, 536870939, 0, 983020, 536870939, 0, 983021, 536870939, 0, 983022, 536870939, 0, 983023, 536870939, 0, 983024, 536870939, 0, 983025, 536870939, 0, 983026, 536870939, 0, 983027, 536870939, 0, 983028, 39, 0, 983029, 39, 0, 983030, 39, 0, 983031, 39, 0, 983032, 39, 0, 983033, 39, 0, 983034, 39, 0, 983035, 39, 0, 983036, 39, 0, 983037, 39, 0, 983038, 39, 0, 983039, 39, 0, 917504, 39, 0, 917505, 39, 0, 917506, 39, 0, 917507, 39, 0, 917508, 39, 0, 917509, 39, 0, 917510, 39, 0, 917511, 39, 0, 917512, 39, 0, 917513, 1610612775, 0, 917514, 1610612775, 0, 917536, -1073741785, 0, 917537, -1073741792, 0, 917538, -1073741792, 0, 917539, -1073741792, 0, 917540, -1073741792, 0, 917541, -1073741792, 0, 917542, 32, 0, 917543, 32, 0, 917544, 32, 0, 917545, 32, 0, 917546, 32, 0, 917547, 32, 0, 917548, 32, 0, 917549, 32, 0, 917550, 32, 0, 917551, 32, 0, 917552, 32, 0, 917553, 32, 0, 917554, 32, 0, 917555, 32, 0, 917556, 32, 0, 917557, 32, 0, 917558, 32, 0, 917559, 32, 0, 917560, 536870944, 0, 917561, 536870944, 0, 917562, 536870944, 0, 917563, 536870944, 0, 917564, 536870944, 0, 917565, 536870944, 0, 917566, 536870944, 0, 917567, 536870944, 0, 917568, 536870944, 0, 1048547, 536870939, 0, 1048548, 536870939, 0, 1048549, 536870939, 0, 1048550, 536870939, 0, 1048551, 536870939, 0, 1048552, 536870939, 0, 1048553, 536870939, 0, 1048554, 536870939, 0, 1048555, 536870939, 0, 1048556, 536870939, 0, 1048557, 536870939, 0, 1048558, 536870939, 0, 1048559, 536870939, 0, 1048560, 536870939, 0, 1048561, 536870939, 0, 1048562, 536870939, 0, 1048563, 536870939, 0, 1048564, 32, 0, 1048565, 32, 0, 1048566, 32, 0, 1048567, 32, 0, 1048568, 32, 0, 1048569, 32, 0, 1048570, 32, 0, 1048571, 32, 0, 1048572, 32, 0, 1048573, 32, 0, 1048574, 32, 0, 1048575, 32, 0, 983040, 32, 0, 983041, 32, 0, 983042, 32, 0, 983043, 32, 0, 983044, 32, 0, 983045, 32, 0, 983046, 32, 0, 983047, 32, 0, 983048, -1610612701, 0, 983049, -1610612696, 0, 983050, -1610612696, 0, 983072, -1073741814, 0, 983073, -1073741814, 0, 983074, -1073741792, 0, 983075, -1073741792, 0, 983076, -1073741792, 0, 983077, -1073741792, 0, 983078, 32, 0, 983079, 32, 0, 983080, 32, 0, 983081, 32, 0, 983082, 32, 0, 983083, 32, 0, 983084, 32, 0, 983085, 32, 0, 983086, 32, 0, 983087, 32, 0, 983088, 32, 0, 983089, 32, 0, 983090, 32, 0, 983091, 32, 0, 983092, 32, 0, 983093, 32, 0, 983094, 32, 0, 983095, 32, 0, 983096, 536870944, 0, 983097, 536870944, 0, 983098, 536870944, 0, 983099, 536870944, 0, 983100, 536870944, 0, 983101, 536870944, 0, 983102, 536870944, 0, 983103, 536870944, 0, 983104, 536870944, 0, 1114083, 536870939, 0, 1114084, 536870939, 0, 1114085, 536870939, 0, 1114086, 536870939, 0, 1114087, 536870939, 0, 1114088, 536870939, 0, 1114089, 536870939, 0, 1114090, 536870939, 0, 1114091, 536870939, 0, 1114092, 536870939, 0, 1114093, 536870939, 0, 1114094, 536870939, 0, 1114095, 536870939, 0, 1114096, 536870939, 0, 1114097, 536870939, 0, 1114098, 536870939, 0, 1114099, 536870939, 0, 1114100, 39, 0, 1114101, 39, 0, 1114102, 39, 0, 1114103, 39, 0, 1114104, 39, 0, 1114105, 39, 0, 1114106, 39, 0, 1114107, 39, 0, 1114108, 39, 0, 1114109, 39, 0, 1114110, 39, 0, 1114111, 39, 0, 1048576, 39, 0, 1048577, 39, 0, 1048578, 39, 0, 1048579, 39, 0, 1048580, 39, 0, 1048581, 39, 0, 1048582, 39, 0, 1048583, -1610612701, 0, 1048610, 12, 0, 1048611, -1073741792, 0, 1048612, -1073741792, 0, 1048613, -1073741792, 0, 1048614, 32, 0, 1048615, 32, 0, 1048616, 32, 0, 1048617, 32, 0, 1048618, 32, 0, 1048619, 32, 0, 1048620, 32, 0, 1048621, 32, 0, 1048622, 32, 0, 1048623, 32, 0, 1048624, 32, 0, 1048625, 32, 0, 1048626, 32, 0, 1048627, 32, 0, 1048628, 32, 0, 1048629, 32, 0, 1048630, 32, 0, 1048631, 32, 0, 1048632, 536870944, 0, 1048633, 536870944, 0, 1048634, 536870944, 0, 1048635, 536870944, 0, 1048636, 536870944, 0, 1048637, 536870944, 0, 1048638, 536870944, 0, 1048639, 536870944, 0, 1048640, 536870944, 0, 1179619, 536870939, 0, 1179620, 536870939, 0, 1179621, 536870939, 0, 1179622, 536870939, 0, 1179623, 536870939, 0, 1179624, 536870939, 0, 1179625, 536870939, 0, 1179626, 536870939, 0, 1179627, 536870939, 0, 1179628, 536870939, 0, 1179629, 536870939, 0, 1179630, 536870939, 0, 1179631, 536870939, 0, 1179632, 536870939, 0, 1179633, 536870939, 0, 1179634, 536870939, 0, 1179635, 536870939, 0, 1179636, 39, 0, 1179637, 39, 0, 1179638, 39, 0, 1179639, 39, 0, 1179640, 39, 0, 1179641, 39, 0, 1179642, 39, 0, 1179643, 39, 0, 1179644, 39, 0, 1179645, 39, 0, 1179646, 39, 0, 1179647, 39, 0, 1114112, 39, 0, 1114113, 39, 0, 1114114, 39, 0, 1114115, 39, 0, 1114116, 39, 0, 1114117, 39, 0, 1114118, -1610612701, 0, 1114147, 12, 0, 1114148, -1073741792, 0, 1114149, -1073741792, 0, 1114150, 32, 0, 1114151, 32, 0, 1114152, 32, 0, 1114153, 32, 0, 1114154, 32, 0, 1114155, 32, 0, 1114156, 32, 0, 1114157, 32, 0, 1114158, 32, 0, 1114159, 32, 0, 1114160, 32, 0, 1114161, 32, 0, 1114162, 32, 0, 1114163, 32, 0, 1114164, 32, 0, 1114165, 32, 0, 1114166, 32, 0, 1114167, 32, 0, 1114168, 536870944, 0, 1114169, 536870944, 0, 1114170, 536870944, 0, 1114171, 536870944, 0, 1114172, 536870944, 0, 1114173, 536870944, 0, 1114174, 536870944, 0, 1114175, 536870944, 0, 1114176, 536870944, 0, 1245155, 536870939, 0, 1245156, 536870939, 0, 1245157, 536870939, 0, 1245158, 536870939, 0, 1245159, 536870939, 0, 1245160, 536870939, 0, 1245161, 536870939, 0, 1245162, 536870939, 0, 1245163, 536870939, 0, 1245164, 536870939, 0, 1245165, 536870939, 0, 1245166, 536870939, 0, 1245167, 536870939, 0, 1245168, 536870939, 0, 1245169, 536870939, 0, 1245170, 536870939, 0, 1245171, 536870939, 0, 1245172, 37, 0, 1245173, 37, 0, 1245174, 37, 0, 1245175, 37, 0, 1245176, 37, 0, 1245177, 37, 0, 1245178, 37, 0, 1245179, 37, 0, 1245180, 37, 0, 1245181, 37, 0, 1245182, 37, 0, 1245183, 37, 0, 1179648, 37, 0, 1179649, 37, 0, 1179650, 37, 0, 1179651, 37, 0, 1179652, 37, 0, 1179653, -1610612701, 0, 1179684, 12, 0, 1179685, -1073741792, 0, 1179686, 32, 0, 1179687, 32, 0, 1179688, 32, 0, 1179689, 32, 0, 1179690, 32, 0, 1179691, 32, 0, 1179692, 32, 0, 1179693, 32, 0, 1179694, 32, 0, 1179695, 32, 0, 1179696, 32, 0, 1179697, 32, 0, 1179698, 32, 0, 1179699, 32, 0, 1179700, 32, 0, 1179701, 32, 0, 1179702, 32, 0, 1179703, 536870944, 0, 1179704, 536870944, 0, 1179705, 536870944, 0, 1179706, 536870944, 0, 1179707, 536870944, 0, 1179708, 536870944, 0, 1179709, 536870944, 0, 1179710, 536870944, 0, 1179711, 536870944, 0, 1179712, 536870944, 0, 1310691, 536870939, 0, 1310692, 536870939, 0, 1310693, 536870939, 0, 1310694, 536870939, 0, 1310695, 536870939, 0, 1310696, 536870939, 0, 1310697, 536870939, 0, 1310698, 536870939, 0, 1310699, 536870939, 0, 1310700, 536870939, 0, 1310701, 536870939, 0, 1310702, 536870939, 0, 1310703, 536870939, 0, 1310704, 536870939, 0, 1310705, 536870939, 0, 1310706, 536870939, 0, 1310707, 536870939, 0, 1310708, 37, 0, 1310709, 37, 0, 1310710, 37, 0, 1310711, 37, 0, 1310712, 37, 0, 1310713, 37, 0, 1310714, 37, 0, 1310715, 37, 0, 1310716, 37, 0, 1310717, 37, 0, 1310718, 37, 0, 1310719, 37, 0, 1245184, 37, 0, 1245185, 37, 0, 1245186, 37, 0, 1245187, 37, 0, 1245188, 36, 0, 1245189, 35, 0, 1245221, 1073741834, 0, 1245222, 32, 0, 1245223, 32, 0, 1245224, 32, 0, 1245225, 32, 0, 1245226, 32, 0, 1245227, 32, 0, 1245228, 32, 0, 1245229, 32, 0, 1245230, 32, 0, 1245231, 32, 0, 1245232, 32, 0, 1245233, 32, 0, 1245234, 32, 0, 1245235, 32, 0, 1245236, 32, 0, 1245237, 32, 0, 1245238, 32, 0, 1245239, 536870944, 0, 1245240, 536870944, 0, 1245241, 536870944, 0, 1245242, 536870944, 0, 1245243, 536870944, 0, 1245244, 536870944, 0, 1245245, 536870944, 0, 1245246, 536870944, 0, 1245247, 536870944, 0, 1245248, 536870944, 0, 1376227, 536870939, 0, 1376228, 536870939, 0, 1376229, 536870939, 0, 1376230, 536870939, 0, 1376231, 536870939, 0, 1376232, 536870939, 0, 1376233, 536870939, 0, 1376234, 536870939, 0, 1376235, 536870939, 0, 1376236, 536870939, 0, 1376237, 536870939, 0, 1376238, 536870939, 0, 1376239, 536870939, 0, 1376240, 536870939, 0, 1376241, 536870939, 0, 1376242, 536870939, 0, 1376243, 536870939, 0, 1376244, 36, 0, 1376245, 36, 0, 1376246, 36, 0, 1376247, 36, 0, 1376248, 36, 0, 1376249, 36, 0, 1376250, 36, 0, 1376251, 36, 0, 1376252, 36, 0, 1376253, 36, 0, 1376254, 36, 0, 1376255, 36, 0, 1310720, 36, 0, 1310721, 36, 0, 1310722, 36, 0, 1310723, 36, 0, 1310724, 36, 0, 1310725, 35, 0, 1310757, 1073741834, 0, 1310758, 1073741851, 0, 1310759, 1073741851, 0, 1310760, 1073741851, 0, 1310761, 1073741851, 0, 1310762, 1073741851, 0, 1310763, 1073741851, 0, 1310764, 1073741851, 0, 1310765, 1073741851, 0, 1310766, 1073741851, 0, 1310767, 1073741851, 0, 1310768, 1073741851, 0, 1310769, 1073741851, 0, 1310770, 1073741851, 0, 1310771, 1073741851, 0, 1310772, 1073741851, 0, 1310773, 1073741851, 0, 1310774, 1073741851, 0, 1310775, 1073741851, 0, 1310776, 536870944, 0, 1310777, 536870944, 0, 1310778, 536870944, 0, 1310779, 536870944, 0, 1310780, 536870944, 0, 1310781, 536870944, 0, 1310782, 536870944, 0, 1310783, 536870944, 0, 1310784, 536870944, 0, 1441763, 536870939, 0, 1441764, 536870939, 0, 1441765, 536870939, 0, 1441766, 536870939, 0, 1441767, 536870939, 0, 1441768, 536870939, 0, 1441769, 536870939, 0, 1441770, 536870939, 0, 1441771, 536870939, 0, 1441772, 536870939, 0, 1441773, 536870939, 0, 1441774, 536870939, 0, 1441775, 536870939, 0, 1441776, 536870939, 0, 1441777, 536870939, 0, 1441778, 536870939, 0, 1441779, 536870939, 0, 1441780, 36, 0, 1441781, 36, 0, 1441782, 36, 0, 1441783, 36, 0, 1441784, 36, 0, 1441785, 36, 0, 1441786, 36, 0, 1441787, 36, 0, 1441788, 36, 0, 1441789, 36, 0, 1441790, 36, 0, 1441791, 36, 0, 1376256, 36, 0, 1376257, 36, 0, 1376258, 36, 0, 1376259, 36, 0, 1376260, 36, 0, 1376261, 35, 0, 1376293, 1073741834, 0, 1376294, 1073741851, 0, 1376295, 1073741851, 0, 1376296, 1073741851, 0, 1376297, 1073741851, 0, 1376298, 1073741851, 0, 1376299, 1073741851, 0, 1376300, 1073741851, 0, 1376301, 1073741851, 0, 1376302, 1073741851, 0, 1376303, 1073741851, 0, 1376304, 1073741851, 0, 1376305, 1073741851, 0, 1376306, 1073741851, 0, 1376307, 1073741851, 0, 1376308, 1073741851, 0, 1376309, 1073741851, 0, 1376310, 1073741851, 0, 1376311, 1073741851, 0, 1376312, 536870944, 0, 1376313, 536870944, 0, 1376314, 536870944, 0, 1376315, 536870944, 0, 1376316, 536870944, 0, 1376317, 536870944, 0, 1376318, 536870944, 0, 1376319, 536870944, 0, 1376320, 536870944, 0, 1507299, 536870939, 0, 1507300, 536870939, 0, 1507301, 536870939, 0, 1507302, 536870939, 0, 1507303, 536870939, 0, 1507304, 536870939, 0, 1507305, 536870939, 0, 1507306, 536870939, 0, 1507307, 536870939, 0, 1507308, 536870939, 0, 1507309, 536870939, 0, 1507310, 536870939, 0, 1507311, 536870939, 0, 1507312, 536870939, 0, 1507313, 536870939, 0, 1507314, 536870939, 0, 1507315, 536870939, 0, 1507316, 36, 0, 1507317, 36, 0, 1507318, 36, 0, 1507319, 36, 0, 1507320, 36, 0, 1507321, 36, 0, 1507322, 36, 0, 1507323, 36, 0, 1507324, 36, 0, 1507325, 36, 0, 1507326, 36, 0, 1507327, 36, 0, 1441792, 36, 0, 1441793, 36, 0, 1441794, 36, 0, 1441795, 36, 0, 1441796, 36, 0, 1441797, 35, 0, 1441829, 31, 0, 1441830, 32, 0, 1441831, 32, 0, 1441832, 32, 0, 1441833, 32, 0, 1441834, 32, 0, 1441835, 32, 0, 1441836, 32, 0, 1441837, 32, 0, 1441838, 32, 0, 1441839, 32, 0, 1441840, 32, 0, 1441841, 32, 0, 1441842, 32, 0, 1441843, 32, 0, 1441844, 32, 0, 1441845, 32, 0, 1441846, 32, 0, 1441847, 32, 0, 1441848, 32, 0, 1441849, 32, 0, 1441850, 32, 0, 1441851, 32, 0, 1441852, 32, 0, 1441853, 32, 0, 1441854, 32, 0, 1441855, 32, 0, 1441856, 32, 0 )

[node name="Castle" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196644, 536870912, 0, 196646, 536870912, 0, 196648, 536870922, 0, 196650, 536870922, 0, 262182, 536870912, 0, 262183, 536870912, 0, 262184, 536870922, 0, 262185, 536870922, 0, 262186, 536870922, 0, 327718, 536870912, 0, 327719, 536870912, 0, 327720, 536870922, 0, 327721, 536870922, 0, 327722, 536870922, 0, 393254, 536870912, 0, 393255, 536870912, 0, 393256, 536870922, 0, 393257, 536870922, 0, 393258, 536870922, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 524326, 536870912, 0, 524327, 536870912, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0 )

[node name="Castle wohitbox" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196642, 536870922, 0, 196644, 536870922, 0, 262178, 536870922, 0, 262179, 536870922, 0, 262180, 536870922, 0, 262181, 536870922, 0, 262182, 536870912, 0, 262183, 536870912, 0, 327714, 536870922, 0, 327715, 536870922, 0, 327716, 536870922, 0, 327717, 536870922, 0, 327718, 536870912, 0, 327719, 536870912, 0, 393250, 536870922, 0, 393251, 536870922, 0, 393252, 536870922, 0, 393253, 536870922, 0, 393254, 536870912, 0, 393255, 536870912, 0, 458786, 536870922, 0, 458787, 536870922, 0, 458788, 536870922, 0, 458789, 536870922, 0, 458790, 536870912, 0, 458791, 536870912, 0, 524322, 536870922, 0, 524323, 536870922, 0, 524324, 536870922, 0, 524325, 536870922, 0, 524326, 536870912, 0, 524327, 536870912, 0, 589858, 536870922, 0, 589859, 536870922, 0, 589862, 536870912, 0, 589863, 536870912, 0, 655394, 536870922, 0, 655395, 536870922, 0, 655398, 536870912, 0, 655399, 536870912, 0, 720930, 536870922, 0, 720931, 536870922, 0, 720934, 536870912, 0, 720935, 536870912, 0, 786466, 536870922, 0, 786467, 536870922, 0, 786470, 536870912, 0, 786471, 536870912, 0 )

[node name="Castle wohitbox infront" type="TileMap" parent="Platforms"]
z_index = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262182, 536870912, 0, 262183, 536870912, 0, 327718, 536870912, 0, 327719, 536870912, 0, 393254, 536870912, 0, 393255, 536870912, 0, 458790, 536870912, 0, 458791, 536870912, 0, 524326, 536870922, 0, 524327, 536870922, 0, 524328, 536870922, 0, 524329, 0, 0, 524330, 0, 0, 589862, 536870922, 0, 589863, 536870922, 0, 589864, 536870922, 0, 589865, 536870922, 0, 589866, 536870922, 0, 655398, 536870922, 0, 655399, 536870922, 0, 655400, 536870922, 0, 655401, 536870922, 0, 655402, 536870922, 0, 720934, 536870922, 0, 720935, 536870922, 0, 720936, 536870922, 0, 720937, 536870922, 0, 720938, 536870922, 0, 786470, 536870922, 0, 786471, 536870922, 0, 786472, 536870922, 0, 786473, 536870922, 0, 786474, 536870922, 0 )

[node name="Blackboxes wohitbox in the back" type="TileMap" parent="Platforms"]
modulate = Color( 0, 0, 0, 1 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589860, 536870912, 0, 589861, 536870912, 0, 655396, 536870912, 0, 655397, 536870912, 0, 720932, 536870912, 0, 720933, 536870912, 0, 786468, 536870912, 0, 786469, 536870912, 0 )

[node name="Restrict" type="TileMap" parent="Platforms"]
z_index = -1
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 917508, 46, 0, 983044, 46, 0, 1048580, 46, 0, 1114116, 46, 0, 1179652, 46, 0, 1245188, 46, 0, 1310724, 46, 0, 1376260, 46, 0, 1441796, 46, 0 )

[node name="Allow" type="TileMap" parent="Platforms"]
z_index = -1
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524326, 46, 0, 589862, 46, 0, 655398, 46, 0, 720934, 46, 0, 786470, 46, 0, 852006, 46, 0, 917542, 46, 0 )

[node name="Player" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.866667, 0.866667, 0.866667, 1 )
position = Vector2( -416.479, 186.087 )

[node name="Interface" parent="Player" index="0"]
editor/display_folded = false

[node name="Camera2D" parent="Player/KinematicBody2D" index="4"]
limit_left = -430
limit_right = 1000
limit_bottom = 280

[node name="NextArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 648.156, 174.852 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextArea"]
position = Vector2( 386.818, -47.0573 )
shape = SubResource( 1 )

[node name="EnterBoss" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterBoss"]
position = Vector2( 452.024, 131.362 )
scale = Vector2( 0.333612, 1 )
shape = SubResource( 2 )

[node name="Enemies" type="Node" parent="."]
editor/display_folded = true

[node name="soldier" parent="Enemies" instance=ExtResource( 9 )]
visible = false
position = Vector2( 180, 33 )

[node name="soldier2" parent="Enemies" instance=ExtResource( 9 )]
visible = false
position = Vector2( 560, 33 )

[node name="Boss" type="Node2D" parent="."]
editor/display_folded = true

[node name="minotaur" parent="Boss" instance=ExtResource( 10 )]
position = Vector2( 542.014, 174.48 )
scale = Vector2( 1.4, 1.4 )

[node name="PopupDialog" parent="." instance=ExtResource( 11 )]
editor/display_folded = true

[connection signal="body_entered" from="NextArea" to="." method="_on_NextArea_body_entered"]
[connection signal="body_entered" from="EnterBoss" to="." method="_on_EnterBoss_body_entered"]
[connection signal="pressed" from="PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]

[editable path="Player"]

[editable path="Player/Interface"]

[editable path="PopupDialog"]
